Add example of B3 processing for routes

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,7 +12,7 @@ testPostgresDB {
 
 
 remoteServers {
-  serverA = "http://serverA:"${serverAPort}
-  serverB = "http://serverB:"${serverBPort}
+  serverA = "http://localhost:"${serverAPort}
+  serverB = "http://localhost:"${serverBPort}
 }
 
