add github ci action and switch to h2 db

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,18 +1,18 @@
 # This format is compatible with prefixing for quill and reading from nested.
 # x.x.x= format is read differently between the two.
-testPostgresDB {
-  dataSourceClassName ="org.postgresql.ds.PGSimpleDataSource"
+testDB {
+  dataSourceClassName ="org.h2.jdbcx.JdbcDataSource"
   dataSource {
-     databaseName = "testdb"
-     password = "password"
-     user = "postgres"
-     url = "jdbc:postgresql://localhost/testdb?user=postgres"
+     password = ""
+     user = "sa"
+     url = "jdbc:h2:file:./testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH"
   }
 }
 
-
 remoteServers {
-  serverA = "http://localhost:"${serverAPort}
-  serverB = "http://localhost:"${serverBPort}
+  serverA = "http://localhost:A???"
+  serverA = "http://localhost:"${?serverAPort}
+  serverB = "http://localhost:B???"
+  serverB = "http://localhost:"${?serverBPort}
 }
 
